git/5/dm-redmine.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dm-redmine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rs-redmine
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: rs-redmine
    spec:
      containers:
        - image: redmine:4.1.1
          name: dm-redmine
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 100Mi
